2004-09-13  David Schleef  <ds@schleef.org>

	* configure.ac: export GLIB_REQUIRES
	* glib-compat/glib/gfileutils.c: (g_file_test),
	(g_file_error_quark), (g_file_error_from_errno),
	(get_contents_stdio), (get_contents_regfile), (get_contents_posix),
	(get_contents_win32), (g_mkstemp), (g_file_open_tmp),
	(g_build_pathv), (g_build_path), (g_build_filename),
	(g_file_read_link), (g_readfile_new), (g_readfile_get_length),
	(g_readfile_get_contents), (g_readfile_free): more compat stuff
	* glib-compat/glib/gstrfuncs.c: (g_memdup): same
	* glib-compat/glib/gstrfuncs.h: same

2004-09-13  David Schleef  <ds@schleef.org>

	* .cvsignore:  Some cvsignore files
	* gimp-loader/.cvsignore:
	* glib-compat/.cvsignore:
	* libswfdec/.cvsignore:
	* libswfdec/jpeg/.cvsignore:
	* libswfdec/mpeg/.cvsignore:
	* pixbuf-loader/.cvsignore:
	* player/.cvsignore:
	* plugin/.cvsignore:
	* test/.cvsignore:
	* test/dump.c: (main), (dump_sprite):  oops, these never got added
	* test/render.c: (buffer_free), (main): same

2004-09-13  David Schleef  <ds@schleef.org>

	* configure.ac: Bump soname for liboil and swfdec
	* libswfdec/art.c: (art_rgb_run_alpha_2): adjust for liboil API
	* libswfdec/jpeg/jpeg.c: (jpeg_decoder_decode_entropy_segment): same
	* libswfdec/swf.c: (swfdec_decoder_parse): ERROR->WARNING

2004-09-01  David Schleef  <ds@schleef.org>

	Make more compatibile with glib-compat.
	* Makefile.am:
	* README:
	* configure.ac:
	* gimp-loader/Makefile.am:
	* gimp-loader/swf-gimp.c:
	* libswfdec/Makefile.am:
	* swfdec.pc.in:

	Glib compatibility stuff.  Mostly taken from glib.
	* glib-compat/Makefile.am:
	* glib-compat/glib.h:
	* glib-compat/glib/Makefile.am:
	* glib-compat/glib/config.h:
	* glib-compat/glib/garray.c:
	* glib-compat/glib/garray.h:
	* glib-compat/glib/gdebug.h:
	* glib-compat/glib/gfileutils.c:
	* glib-compat/glib/gfileutils.h:
	* glib-compat/glib/glist.c:
	* glib-compat/glib/glist.h:
	* glib-compat/glib/gmacros.h:
	* glib-compat/glib/gmem.c:
	* glib-compat/glib/gmem.h: